--- a/code/configure/cubify.conf
+++ b/code/configure/cubify.conf
@@ -3,12 +3,12 @@ Dimensions = prodID, suppID, promoID, custID, storeID, SalesPersonID
 DimensionSizes = 50, 5, 6, 20, 10, 3
 MVerticesNum = 10
 IoA = 500
-MMode = LargestVertices
+MMode = Optimized
 RFMode = Rand
 RefFrequencies = 580, 730, 850, 40, 10, 130, 720, 820, 510, 180, 970, 60, 580, 600, 610, 270, 710, 830, 280, 550, 560, 780, 500, 570, 890, 430, 390, 130, 270, 950, 870, 530, 130, 290, 630, 160, 560, 370, 500, 740, 460, 520, 430, 600, 450, 180, 120, 420, 920, 10, 650, 170, 920, 240, 640, 610, 480, 810, 190, 850, 350, 700, 670, 980, 400, 780, 140, 740, 760, 970, 580, 450, 910, 290, 290, 450, 170, 880, 420, 120, 860, 320, 410, 250, 550, 650, 1000, 240, 510, 600, 440, 10, 40, 780, 940, 740, 110, 200, 500, 680
 MVertices = custKey, partKey | partKey | custKey
-MaxStorageNumTuples = 1500
+MaxStorageNumTuples = 500
 OptMethod = MaxStorage
 TimeGrain = Second
 LatticeOutputVertices = prodID, suppID, promoID, custID, storeID, SalesPersonID
-ReadToWriteCostRatio = 1
+ReadToWriteCostRatio = 1.642442
